tests/requests/invalid/obs_fold_01.py
from gunicorn.http.errors import ObsoleteFolding

request = ObsoleteFolding
